--- a/content_management/templates/contact_us.html
+++ b/content_management/templates/contact_us.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact</title>
         {% load static %}
-        <link rel="stylesheet" href="{% static 'css1/base.css' %}">
+        <link rel="stylesheet" href="{% static 'css/base.css' %}">
         <link rel="stylesheet" href="{% static 'css/contact_us.css' %}">
         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -38,8 +38,11 @@
 
             <!-- Banner Section -->
         <section class="banner">
-            <h1>Welcome to Moral Values</h1>
+            <h1 style="font-size: 3em; font-weight: bold; color: #ffffff; text-align: center; margin-top: 20px;">
+                Welcome to Moral Values
+            </h1>
         </section>
+             
 
             <!-- Main Content -->
         <main>
