--- a/static/css/about.css
+++ b/static/css/about.css
@@ -1,15 +1,17 @@
 /* BANNER */
-
 .banner {
     background: url('../images/banner_about.jpg') no-repeat center center;
     background-size: cover;
-}
-.banner {
     text-align: left; /* Metinleri sola hizala */
     color: white;
     padding: 200px 20px;
-    background-size: cover;
     background-position: center;
+}
+
+.banner img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
 }
 
 .banner h1 {
@@ -27,37 +29,47 @@
 }
 
 /* About */
-
 .about-content {
     max-width: 1200px;
     margin: 80px auto 40px;
     padding: 20px;
-    background: rgba(255, 255, 255, 0); /* Şeffaf  arka plan */
+    background: rgba(255, 255, 255, 0); /* Şeffaf arka plan */
 }
 
-.about-content h2 {
-    color: #1f8cad;
-    font-size: 2.2em;
-    text-align: center;
-    margin-bottom: 20px;
+/* Responsive görseller */
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
 }
 
-.about-content p {
-    color: #444;
-    font-size: 1.1em;
-    line-height: 1.6;
-    text-align: center;
-    margin-bottom: 20px;
+/* Responsive Banner */
+@media only screen and (max-width: 480px) {
+    .banner h1 {
+        font-size: 1.5em;
+    }
 }
 
-/* introduction */
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+    .banner h1 {
+        font-size: 2em;
+    }
+}
 
+@media only screen and (min-width: 769px) {
+    .banner h1 {
+        font-size: 3em;
+    }
+}
+
+/* Introduction */
 .introduction {
     display: flex;
     align-items: center;
     background-color: #f9f9f9;
     padding: 60px 20px;
-    gap: 20px; /* Görsel ile metin arasında boşluk */
+    gap: 20px;
 }
 
 .intro-content {
@@ -69,7 +81,7 @@
     font-size: 2.5em;
     color: #1f8cad;
     margin-bottom: 20px;
-    text-transform: uppercase; /* Büyük harflerle dikkat çekici hale getirme */
+    text-transform: uppercase;
 }
 
 .intro-content p {
@@ -78,41 +90,36 @@
     max-width: 600px;
 }
 
-/* Kapsayıcı div'e uygulanacak stil */
 .intro-image {
     flex: 1;
     text-align: center;
-    margin-bottom: 20px; /* Görsel ile diğer içerik arasında boşluk bırakmak için */
+    margin-bottom: 20px;
 }
 
-/* Resmin boyutunu kontrol eden stil */
 .intro-image img {
-    width: 200px; /* Görselin genişliği */
-    height: auto; /* Yükseklik orantılı olarak ayarlanır */
+    width: 200px;
+    height: auto;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Hafif gölge efekti */
-    transition: transform 0.3s ease; /* Görsel hover efekti */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease;
 }
 
-/* Hover sırasında görselin büyüme efekti */
 .intro-image img:hover {
-    transform: scale(1.05); /* Hover sırasında %5 büyüme */
+    transform: scale(1.05);
 }
 
-/* Animasyon için başlangıç stilini tanımlar */
 .fade-in-section {
     opacity: 0;
-    transform: translateX(-50px); /* Başlangıçta soldan 50px uzaklıkta olacak */
+    transform: translateX(-50px);
     transition: opacity 0.6s ease-out, transform 0.6s ease-out;
 }
 
 .fade-in-section.show {
     opacity: 1;
-    transform: translateX(0); /* Normal pozisyonuna geri döner */
+    transform: translateX(0);
 }
 
 /* Vision - Mission */
-
 .vision-mission, .our-story, .our-team, .values, .support-us {
     margin-bottom: 40px;
 }
@@ -126,7 +133,6 @@
 }
 
 /* OUR-STORY */
-
 .our-story, .values {
     background-color: #ffffff;
     padding: 20px;
@@ -134,8 +140,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-/* TEAM MEMBER */ 
-
+/* TEAM MEMBER */
 .meet-the-team {
     background-color: #f9f9f9;
     padding: 60px 20px;
@@ -156,19 +161,19 @@
     padding: 20px;
     max-width: 300px;
     text-align: center;
-    opacity: 0; /* Başlangıçta görünmez */
-    transform: translateY(20px); /* Başlangıçta biraz aşağıda */
-    transition: opacity 0.5s ease, transform 0.5s ease; /* Yumuşak geçiş */
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.5s ease, transform 0.5s ease;
 }
 
 .team-member.visible {
-    opacity: 1; /* Görünür hale gelir */
-    transform: translateY(0); /* Normal konuma gelir */
+    opacity: 1;
+    transform: translateY(0);
 }
 
 .team-member:hover {
-    transform: translateY(-10px); /* Üzerine gelindiğinde hafifçe yukarı çıkar */
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Gölgeler derinleşir */
+    transform: translateY(-10px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .team-member img {
@@ -176,7 +181,7 @@
     height: 100px;
     border-radius: 50%;
     margin-bottom: 10px;
-    object-fit: cover; /* Görüntünün içeriğe sığmasını sağlar */
+    object-fit: cover;
 }
 
 .team-member h3 {
@@ -211,11 +216,10 @@
 }
 
 .contact-info a:hover {
-    color: #33C1FF; /* Üzerine gelindiğinde renk değişir */
+    color: #33C1FF;
 }
 
 /* Values */
-
 .values ul {
     display: flex;
     justify-content: center;
@@ -234,49 +238,46 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-/* DONAte */
-
+/* Donate */
 .support-us {
-    background: linear-gradient(135deg, #76daf6, #00c6ff); /* Canlı bir geçiş efekti ekleyin */
-    color: #ffffff; /* Yazı rengini beyaz yaparak kontrastı artırın */
+    background: linear-gradient(135deg, #76daf6, #00c6ff);
+    color: #ffffff;
     padding: 20px 5px;
     text-align: center;
-    border-radius: 15px; /* Köşeleri yuvarlatın */
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); /* Daha derin bir gölge ekleyin */
+    border-radius: 15px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
+
 .support-us h2 {
-    font-size: 2.5em; /* Başlığı büyütün */
+    font-size: 2.5em;
     margin-bottom: 20px;
-    text-shadow: 2px 2px 4px rgb(250, 250, 250); /* Hafif gölge efekti */
+    text-shadow: 2px 2px 4px rgb(250, 250, 250);
 }
 
 .support-us p {
-    font-size: 1.2em; /* Yazı boyutunu büyütün */
-    max-width: 800px; /* Metni sınırlandırarak daha dar bir alanda toplanmasını sağlayın */
-    margin: 0 auto 20px; /* Ortalanmış ve altına boşluk bırakılmış metin */
-    text-shadow: 1px 1px 2px rgb(255, 255, 255); /* Hafif bir gölge ile okunabilirliği artırın */
+    font-size: 1.2em;
+    max-width: 800px;
+    margin: 0 auto 20px;
+    text-shadow: 1px 1px 2px rgb(255, 255, 255);
 }
 
 .support-us .donate-btn {
     background: #243254;
-    padding: 12px 24px; /* Buton boyutunu büyütün */
+    padding: 12px 24px;
     border-radius: 8px;
     color: #ffffff;
     text-decoration: none;
     font-weight: bold;
-    transition: background-color 0.3s ease, transform 0.3s ease; /* Hover için geçiş efektleri ekleyin */
-
+    transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 .support-us .donate-btn:hover {
-    background: #02ffd9; /* Üzerine gelindiğinde buton rengini değiştirin */
-    transform: scale(1.05); /* Butonu hafifçe büyütün */
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3); /* Hover sırasında gölge ekleyin */
-
+    background: #02ffd9;
+    transform: scale(1.05);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
 
 .support-us.visible {
     opacity: 1;
     transform: translateY(0);
 }
-
