--- a/content_management/templates/about_us.html
+++ b/content_management/templates/about_us.html
@@ -13,11 +13,13 @@
 
 
 <body>
+        <!-- Logo -->
+        <a href="/" class="fixed-logo">
+            <img src="{% static 'images/logo_1.png' %}" alt="Moral Values">
+        </a>
+
     <!-- Header -->
     <header>
-        <div class="logo">
-            <a href="/"><img src="{% static 'images/logo_1.png' %}" alt="Moral Values Logo"></a>
-        </div>
         <nav>
             <!--  Sol Menüler -->
             <ul class="left-menu">
