--- a/content_management/templates/category_list.html
+++ b/content_management/templates/category_list.html
@@ -15,9 +15,10 @@
 <body>
     <!-- Header -->
     <header>
-        <div class="logo">
-            <a href="/"><img src="{% static 'images/logo_1.png' %}" alt="Moral Values Logo"></a>
-        </div>
+        <!-- Logo -->
+        <a href="/" class="fixed-logo">
+            <img src="{% static 'images/logo_1.png' %}" alt="Moral Values">
+        </a>
         <nav>
             <!--  Sol Menüler -->
             <ul class="left-menu">
