--- a/content_management/templates/contact_us.html
+++ b/content_management/templates/contact_us.html
@@ -17,9 +17,10 @@
     <div class="contact-background">
             <!-- Header -->
         <header>
-            <div class="logo">
-                <a href="/"><img src="{% static 'images/logo_1.png' %}" alt="Moral Values Logo"></a>
-            </div>
+        <!-- Logo -->
+            <a href="/" class="fixed-logo">
+                <img src="{% static 'images/logo_1.png' %}" alt="Moral Values">
+            </a>
             <nav>
                 <!--  Sol Menüler -->
                 <ul class="left-menu">
