--- a/content_management/templates/donate.html
+++ b/content_management/templates/donate.html
@@ -11,9 +11,10 @@
 <body>
     <!-- Header -->
     <header>
-        <div class="logo">
-            <a href="/"><img src="{% static 'images/logo_1.png' %}" alt="Moral Values Logo"></a>
-        </div>
+        <!-- Logo -->
+        <a href="/" class="fixed-logo">
+            <img src="{% static 'images/logo_1.png' %}" alt="Moral Values">
+        </a>
         <nav>
             <ul class="left-menu">
                 <li><a href="{% url 'home' %}">Home</a></li>
