--- a/static/css/base.css
+++ b/static/css/base.css
@@ -225,10 +225,42 @@ footer {
     }
 }
 
+@media only screen and (max-width: 768px) {
+    .fixed-logo {
+        width: 40px; /* Mobilde daha küçük boyutta göster */
+        top: 5px; /* Yukarıdan ve soldan daha az boşluk */
+        left: 10px;
+    }
+    
+    .fixed-logo img {
+        width: 30px; /* Mobilde daha küçük logo */
+    }
+}
 /* Duyarlı Görseller */
 img {
     max-width: 100%;
     height: auto;
     display: block;
     margin: 0 auto;
+}
+
+.fixed-logo {
+    position: fixed; /* Sayfada sabit konumda kalmasını sağlar */
+    top: 10px; /* Yukarıdan uzaklığı */
+    left: 20px; /* Soldan uzaklığı */
+    z-index: 1000; /* Diğer öğelerin üstünde görünmesini sağlar */
+    background: rgba(255, 255, 255, 0); /*  şeffaf bir arka plan ekleyebiliriz */
+    padding: 5px; /* Logonun etrafına hafif bir boşluk ekler */
+    border-radius: 10px; /* Köşeleri yuvarlatır */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Hafif bir gölge ekler */
+    transition: transform 0.3s ease; /* Hover sırasında animasyon eklemek için */
+}
+
+.fixed-logo img {
+    width: 70px; /* Logonun genişliği */
+    height: auto; /* Yüksekliği orantılı olarak ayarlanır */
+}
+
+.fixed-logo:hover {
+    transform: scale(1.1); /* Hover sırasında logonun hafifçe büyümesini sağlar */
 }
